# SimpleRenderEngine

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  License.txt  README.md  cpp-style.md  em-build-release.sh  em-build.sh  glsl-style.md  imgui.ini  version-history.md  vertion-history.md
SRE/: BlendType.h  BlendType.hpp  Camera.cc  Camera.cpp  Camera.h  Camera.hpp  Debug.cpp  Debug.hpp  Export.hpp  Font.inl  Light.cc  Light.cpp  Light.h  Light.hpp  LightType.h  LightType.hpp  Mesh.cc  Mesh.cpp  Mesh.h  Mesh.hpp  MeshTopology.hpp  Renderer.cc  Renderer.h  Shader.cc  Shader.cpp  Shader.h  Shader.hpp  SimpleRenderEngine.cc  SimpleRenderEngine.cpp  SimpleRenderEngine.h  SimpleRenderEngine.hpp  Text.cpp  Text.hpp  Texture.cc  Texture.cpp  Texture.h  Texture.hpp
cmake/: FindGLEW.cmake  FindGLM.cmake  FindOculusSDK.cmake  FindOpenVR.cmake  FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_ttf.cmake
docs/: index.html
docs/examples/: 07_matcap.html  07_matcap.html.mem  09_picking.html  09_picking.html.mem  09_picking.js  10_skybox-example.html  10_skybox-example.html.mem  12_render-to-texture.html  12_render-to-texture.html.mem  12_render-to-texture.js  15_cloth_simulation.html  15_cloth_simulation.html.mem  15_cloth_simulation.js  16_shadows.html.mem  16_shadows.js  convert_img.sh
examples/: 02_spheres.cpp  03_spinning-cube.cpp  04_spinning-primitives-tex.cpp  05_obj-viewer.cpp  06_custom-mesh-layout.cpp  07_matcap.cpp  08_gui.cpp  09_picking.cpp  10_skybox-example.cpp  11_sprite-example.cpp  12_render-to-texture.cpp  13_benchmark64k.cpp  14_spinning-primitives-oculus.cpp  14_spinning-primitives-openvr.cpp  15_cloth_simulation.cpp  16_shadows.cpp  17_deferred-shading.cpp  CMakeLists.txt  SingleFileOpenGLTex.cpp  benchmark64k.cpp  custom-mesh-layout.cpp  gui.cpp  hello-engine-raw.cpp  hello-engine.cpp  matcap.cpp  multiple-lights.cpp  obj-viewer.cpp  particle-sprite.cpp  particle-test.cpp  picking.cpp  polygon-offset-example.cpp  render-to-texture.cpp  skybox-example.cpp  spheres.cpp  spinning-cube-tex.cpp  spinning-cube-unlit.cpp  spinning-cube.cpp  spinning-primitives-openvr.cpp  spinning-primitives-tex.cpp  spinning-sphere-cubemap.cpp  (+3 more)
examples/data/: PlanetCute.json
examples_data/: licnese.txt
examples_data/sponza/: sponza.mtl
html_examples/: 10_skybox-example.html.mem  12_render-to-texture.html.mem  12_render-to-texture.js  15_cloth_simulation.js  16_shadows.html  16_shadows.js
include/: TextEditor.h  imconfig.h  imgui.h  picojson.h
include/SRE/: BlendType.hpp  Camera.hpp  Debug.hpp  GL.hpp  Light.hpp  LightType.hpp  Mesh.hpp  MeshTopology.hpp  ParticleMesh.hpp  RenderStats.h  Renderer.hpp  SREGL.hpp  Shader.hpp  SimpleRenderEngine.hpp  Text.hpp  Texture.hpp  imgui_sre.hpp
include/SRE/impl/: Export.hpp  GL.hpp
include/glm/glm/gtx/: matrix_decompose.inl
include/imgui/: stb_rect_pack.h  stb_truetype.h
include/sre/: BlendType.hpp  Camera.hpp  Color.hpp  Debug.hpp  Framebuffer.hpp  Inspector.hpp  Light.hpp  LightType.hpp  Log.hpp  Material.hpp  Mesh.hpp  MeshTopology.hpp  ModelImporter.hpp  Profiler.hpp  RenderPass.hpp  RenderStats.hpp  Renderer.hpp  Resource.hpp  SDLRenderer.hpp  Shader.hpp  Skybox.hpp  Sprite.hpp  SpriteAtlas.hpp  SpriteBatch.hpp  Texture.hpp  VR.hpp  WorldLights.hpp  imgui_sre.hpp
include/sre/impl/: CPPShim.hpp  EmbeddedTextures.inl  Export.hpp  GL.hpp  GL.inl  ShaderSource.inl  UniformSet.hpp  VROculus.hpp  VROpenVR.hpp
src/: CMakeLists.txt
src/SRE/: Camera.cpp  Debug.cpp  Light.cpp  Mesh.cpp  ParticleMesh.cpp  Renderer.cpp  Shader.cpp  SimpleRenderEngine.cpp  Text.cpp  Texture.cpp
src/embedded_deps/: blit_frag.glsl  blit_vert.glsl  debug_normal_frag.glsl  debug_normal_vert.glsl  debug_tangent_frag.glsl  debug_tangent_vert.glsl  debug_uv_frag.glsl  debug_uv_vert.glsl  global_uniforms_incl.glsl  light-phong.glsl  light_incl.glsl  light_phong_incl.glsl  normalmap_incl.glsl  particles_frag.glsl  particles_vert.glsl  readme.txt  shadow_frag.glsl  shadow_vert.glsl  skybox_frag.glsl  skybox_proc_frag.glsl  skybox_proc_vert.glsl  skybox_vert.glsl  sprite_frag.glsl  sprite_vert.glsl  sre.glsl  sre_utils_incl.glsl  standard_blinn_phong_frag.glsl  standard_blinn_phong_vert.glsl  standard_frag.glsl  standard_pbr_frag.glsl  standard_pbr_vert.glsl  standard_phong_frag.glsl  standard_phong_vert.glsl  standard_vert.glsl  unlit_frag.glsl  unlit_vert.glsl
src/imgui/: TextEditor.cpp  imgui.cpp  imgui_draw.cpp  imgui_sre.cpp
src/sre/: Camera.cpp  Color.cpp  Debug.cpp  Framebuffer.cpp  Inspector.cpp  Light.cpp  Log.cpp  Material.cpp  Mesh.cpp  ModelImporter.cpp  Profiler.cpp  RenderPass.cpp  Renderer.cpp  Resource.cpp  SDLRenderer.cpp  Shader.cpp  Skybox.cpp  Sprite.cpp  SpriteAtlas.cpp  SpriteBatch.cpp  Texture.cpp  VR.cpp  WorldLights.cpp  imgui_sre.cpp
src/sre/impl/: GL.cpp  TextEditor.cpp  UniformSet.cpp  VROculus.cpp  VROpenVR.cpp  imgui_sre.cpp
submodules/: CMakeLists.txt
test/: CMakeLists.txt  benchmark64k-heavy.cpp  bumpmap.cpp  custom-mesh-layout-default-values.cpp  custom-mesh-layout-ints.cpp  deallocation.cpp  gamma.cpp  gui-high-dpi.cpp  gui.cpp  imgui-color-test.cpp  imgui_demo.cpp  matrix-uniforms.cpp  multi-cameras.cpp  multiple-lights.cpp  multiple-materials.cpp  particle-sprite.cpp  particle-test.cpp  pbr-test.cpp  polygon-offset-example.cpp  primitives-test.cpp  render-depth.cpp  screen-point-to-ray.cpp  set-icon.cpp  shadow-test.cpp  spinning-cube-tex.cpp  spinning-cube-unlit.cpp  spinning-cube.cpp  spinning-sphere-cubemap.cpp  spinning-sphere-unlit.cpp  spinning-sphere.cpp  sprite-test.cpp  static_vertex_attribute.cpp  stencil_test.cpp  text-render.cpp  texture-test.cpp  update_shader.cpp
test-data/: Thumbs.db
test_data/: circle-slices-cropped.json  sprite_test.json
test_data/obj-testfiles/: readme.txt
utils/: CMakeLists.txt  files_to_cpp.cpp
